Add AOTCache tto jvmArgs